--- a/vicosafundacoes/templates/vicosafundacoes/forn_list.html
+++ b/vicosafundacoes/templates/vicosafundacoes/forn_list.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block script %}
 <script src="{% static 'vicosafundacoes/js/forn_list.js' %}"></script> 
+<script src="{% static 'categorias/js/pesq_cat_control.js' %}"></script> 
 {% endblock %}
 {% block content %}
 {% csrf_token %}
@@ -75,15 +76,15 @@
                                         Municipal/ Inscrição Estadual</label>
                                     <input type="text" class="form-control " id="forn_ies" name="forn_ies" placeholder="Inscrição Municipal / Inscrição Estadual" required>
                                 </div>
-                                <div class="col-lg-6">
-                                    <label class="font-weight-bold" for="endereco">Tipo</label>
-                                    <select class="form-control" id="endereco" name="endereco"></select>
+                                <div class="form-group col-lg-6">
+                                    <label class="font-weight-bold" for="cat_tip">Tipo</label>
+                                    <select class="form-control" id="cat_tip" name="cat_tip"></select>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-6">
-                                    <label class="font-weight-bold"for="endereco">Impacto </label>
-                                    <select class="form-control " id="endereco" name="endereco"></select>
+                                <div class="form-group col-lg-6">
+                                    <label class="font-weight-bold"for="cat_imp">Impacto </label>
+                                    <select class="form-control " id="cat_imp" name="cat_imp"></select>
                                 </div>
                             </div>
                         </form>
