--- a/fornecedor/templates/fornecedor/forn_aval_list.html
+++ b/fornecedor/templates/fornecedor/forn_aval_list.html
@@ -13,18 +13,15 @@
       </div>
     </div> -->
     <div class="card-body">
-        <button onclick="edt_aval_div()" class="btn btn-light-primary btn-icon btn-circle">
-            <i class="flaticon2-add-1"></i>
-        </button>
         <table class="table table-head-custom" id="kt_aval">
             <thead>
                 <tr>
-                    <th class="datatable-row datatable-row-even">ID</th>
                     <th class="datatable-row datatable-row-even">Fornecedor</th>
                     <th class="datatable-row datatable-row-even">Tipo de Avaliação</th>
                     <th class="datatable-row datatable-row-even">Data</th>
                     <th class="datatable-row datatable-row-even">Responsável</th>
                     <th class="datatable-row datatable-row-even">Evidência</th>
+                    <th class="datatable-row datatable-row-even">ID</th>
                     <th class="datatable-row datatable-row-even">Ações</th>
                 </tr>
             </thead>
@@ -58,6 +55,10 @@
                             <input type="hidden" id="forn_aval_id" name="forn_aval_id">
                             <div class="row">
                                 <div class="form-group col-lg-4">
+                                    <label class="font-weight-bold"for="forn">Fornecedor</label>
+                                    <select class="form-control " id="forn" name="forn"></select>
+                                </div>
+                                <div class="form-group col-lg-4">
                                     <label class="font-weight-bold"for="cat_aval">Tipo Avaliação</label>
                                     <select class="form-control " id="cat_aval" name="cat_aval"></select>
                                 </div>
@@ -65,6 +66,8 @@
                                     <label class="font-weight-bold "for="forn_aval_dta"> Data</label>
                                     <input type="date" class="form-control " id="forn_aval_dta" name="forn_aval_dta" placeholder="Data" required/>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="form-group col-lg-4">
                                     <label class="font-weight-bold"for="pes">Responsável</label>
                                     <select class="form-control " id="pes" name="pes"></select>
@@ -79,29 +82,73 @@
                         </form>
                     </div>
                     <div class="tab-pane fade "  id="kt_tab_pane_5" role="tabpanel" aria-labelledby="kt_tab_pane_5">
-                        <button onclick="abrir_modal_itens()" class="btn btn-light-primary btn-icon btn-circle">
-                            <i class="flaticon2-add-1"></i>
+                        <button onclick="abrir_modal_itens()" class="btn btn-light-primary btn-icon btn-circle mb-3" >
+                            <i class="flaticon-edit-1"></i>
                         </button>
                         <table class="table table-head-custom" id="kt_aval_item">
                             <thead>
                                 <tr>
-                                    <th class="datatable-row datatable-row-even">ID</th>
+                                    <th> 
+                                        <input type='checkbox' class="checkble"> 
+                                    </th> <!-- Coluna especial para a caixa de seleção "selecionar tudo" -->
                                     <th class="datatable-row datatable-row-even">Itens</th>
                                     <th class="datatable-row datatable-row-even">Avaliação</th>
                                     <th class="datatable-row datatable-row-even">Grau de importância</th>
                                     <th class="datatable-row datatable-row-even">Total</th>
-                                    <th class="datatable-row datatable-row-even">Ações</th>
+                                    <th class="datatable-row datatable-row-even none">ID</th>
                                 </tr>
                             </thead>
                             <tbody>
                             </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </tfoot>
                         </table> 
                     </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-text-danger btn-hover-light-danger font-weight-bold" data-dismiss="modal">Sair</button>
-                            <button onclick="itens_add()"type="button" id="itens_btn_salvar" class="btn btn-text-success btn-hover-light-success font-weight-bold">Salvar</button>
+                            <button onclick="aval_salvar()"type="button" id="itens_btn_salvar" class="btn btn-text-success btn-hover-light-success font-weight-bold">Salvar</button>
                         </div> 
                     </div>
+                </div>
+            </div>                
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="frm_itens_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable modal-sm" role="document" >
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Itens</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <i aria-hidden="true" class="ki ki-close"></i>
+                </button>
+            </div>
+            <div class="modal-body" data-scroll="true" >
+                <div class="tab-content" id="myTabContent">
+                    <form method="post" id="frm_item">
+                        {% csrf_token %}
+                        <input type="hidden" id="aval_item_id" name="aval_item_id">
+                        <div class="form-group col-sm-12">
+                            <label class="font-weight-bold "for="aval_item_nota">Avaliação(pontuação)</label>
+                            <input type="number" class="form-control " id="aval_item_nota" name="aval_item_nota" placeholder="" required>
+                        </div>
+                        <div class="form-group col-sm-12">
+                            <label class="font-weight-bold "for="aval_item_grau">Grau de importância</label>
+                            <input type="number" class="form-control " id="aval_item_grau" name="aval_item_grau" placeholder="" required>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-text-danger btn-hover-light-danger font-weight-bold" data-dismiss="modal">Sair</button>
+                            <button onclick="item_edt_div()"type="button" id="item_btn_salvar" class="btn btn-text-success btn-hover-light-success font-weight-bold">Salvar</button>
+                        </div>
+                    </form> 
                 </div>
             </div>                
         </div>
