--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -45,7 +45,7 @@
     <script src="{% static 'assets/js/viewerjs/viewer.js' %}"></script>
     {% block script %}
     {% endblock %}
-    <title>Viçosa Fundações</title>
+    <title>DEV</title>
 </head>
 <body>
     <ul class="nav nav-tabs bg-primary" id="myTab" role="tablist">
