--- a/vicosafundacoes/templates/vicosafundacoes/register.html
+++ b/vicosafundacoes/templates/vicosafundacoes/register.html
@@ -4,7 +4,7 @@
 <head>
     {% load static %}
     <meta charset="utf-8" />
-    <title>Viçosa fundações | Login</title>
+    <title>DEV | Login</title>
     <meta name="description" content="Login page example" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
