--- a/vicosafundacoes/templates/vicosafundacoes/user_dados.html
+++ b/vicosafundacoes/templates/vicosafundacoes/user_dados.html
@@ -34,7 +34,7 @@
     {% block script %}
     <script src="{% static 'js/user_dados.js'%}"></script>
     {% endblock %}
-    <title>Viçosa Fundações</title>
+    <title>DEV</title>
 </head>
 <body>
     <div class="flex-row-fluid ml-lg-8">
