--- a/fornecedor/templates/fornecedor/forn_list.html
+++ b/fornecedor/templates/fornecedor/forn_list.html
@@ -1,9 +1,15 @@
 {% extends "vicosafundacoes/base.html" %}
 {% load static %}
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css">
 {% block script %}
 <script src="{% static 'fornecedor/js/forn_list.js' %}"></script> 
 <script src="{% static 'categorias/js/pesq_cat_control.js' %}"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.2/js/dataTables.buttons.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.html5.min.js"></script>
 {% endblock %}
 {% block content %}
 {% csrf_token %}
@@ -14,13 +20,17 @@
       </div>
     </div> -->
     <div class="card-body">
-        <button onclick="abrir_modal_forn()" class="btn btn-light-primary btn-icon btn-circle">
-            <i class="flaticon2-add-1"></i>
-        </button>
+        <div class="button-container">
+            <button onclick="abrir_modal_forn()" class="btn btn-light-primary btn-icon btn-circle">
+                <i class="flaticon2-add-1"></i>
+            </button>
+        </div>
         <table class="table table-head-custom" id="kt_forn">
             <thead>
                 <tr>
-                    <th class="datatable-row datatable-row-even">ID</th>
+                    <th> 
+                        <input type='checkbox' class="checkble"> 
+                    </th> <!-- Coluna especial para a caixa de seleção "selecionar tudo" -->
                     <th class="datatable-row datatable-row-even">Fornecedor</th>
                     <th class="datatable-row datatable-row-even">Tipo</th>
                     <th class="datatable-row datatable-row-even">Impacto</th>
@@ -28,6 +38,8 @@
                     <th class="datatable-row datatable-row-even">Contato</th>
                     <th class="datatable-row datatable-row-even">Cnpj</th>
                     <th class="datatable-row datatable-row-even">Inscrição Municipal / Estadual</th>
+                    <th class="datatable-row datatable-row-even">Emissão Nota Fiscal</th>
+                    <th class="datatable-row datatable-row-even">ID</th>
                     <th class="datatable-row datatable-row-even">Ações</th>
                 </tr>
             </thead>
@@ -53,9 +65,9 @@
                     <li class="nav-item">
                         <a id="aba_cont"class="nav-link" data-toggle="tab" href="#kt_tab_pane_2">Contato</a>
                     </li> 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a id="aba_aval"class="nav-link" data-toggle="tab" href="#kt_tab_pane_3">Avaliação</a>
-                    </li> 
+                    </li>  -->
                 </ul>
                 <div class="tab-content mt-5" id="myTabContent">
                     <div class="tab-pane fade show active" id="kt_tab_pane_1" role="tabpanel" arial-labelledby="kt_tab_pane_1">   
@@ -72,7 +84,7 @@
                                     <input type="text" class="form-control " id="forn_cnpj" name="forn_cnpj" placeholder="CNPJ" required>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mt-3">
                                 <div class="form-group col-lg-6">
                                     <label class="font-weight-bold "for="forn_ies"> Inscrição
                                         Municipal/ Inscrição Estadual</label>
@@ -84,9 +96,22 @@
                                 </div>
                             </div>
                             <div class="row">
+                                <div class="form-group col-lg-6 mt-3">
+                                    <label class="font-weight-bold" for="cat_imp">Impacto</label>
+                                    <select class="form-control" id="cat_imp" name="cat_imp"></select>
+                                </div>
                                 <div class="form-group col-lg-6">
-                                    <label class="font-weight-bold"for="cat_imp">Impacto </label>
-                                    <select class="form-control " id="cat_imp" name="cat_imp"></select>
+                                    <label class="font-weight-bold col-form-label">Emissão Nota Fiscal</label>
+                                    <div class="radio-inline">
+                                        <label class="radio">
+                                            <input type="radio" name="nf" value="1">OK
+                                            <span></span>
+                                        </label>
+                                        <label class="radio">
+                                            <input type="radio" name="nf" value="2">NC
+                                            <span></span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
