--- a/vicosafundacoes/templates/vicosafundacoes/base.html
+++ b/vicosafundacoes/templates/vicosafundacoes/base.html
@@ -1,4 +1,5 @@
 
+
 <html lang="pt-br">
 <head>
     {% load static %}
@@ -30,6 +31,7 @@
     <script src="{% static 'assets/js/funcoes.js' %}"></script>
     <script src="{% static 'assets/js/pages/crud/forms/widgets/select2.js' %}"></script>
     <script src="{% static 'assets/plugins/custom/datatables/datatables.bundle.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="{% static 'assets/js/viewerjs/viewer.js' %}"></script>
     {% block script %}
     {% endblock %}
@@ -253,10 +255,12 @@
                                         <ul class="menu-nav">
                                             <li class="menu-item menu-item-open menu-item-here menu-item-submenu menu-item-rel" data-menu-toggle="hover" aria-haspopup="true">
                                                 <a href="javascript:;" class="menu-link menu-toggle">
-                                                    <span class="menu-text">Cadastro</span>
+                                                    <!-- Ícone -->
+                                                    <span class="menu-text " > Cadastro</span>
                                                     <span class="menu-desc">Categorias</span>
                                                     <i class="menu-arrow"></i>
                                                 </a>
+                                                
                                                 <div class="menu-submenu menu-submenu-classic menu-submenu-left">
                                                     <ul class="menu-subnav">
                                                         <li class="menu-item menu-item-active" aria-haspopup="true">
@@ -284,25 +288,61 @@
                                                                 <span class="menu-text">Categoria Tipo</span>
                                                             </a>
                                                         </li>
+                                                        <li class="menu-item" aria-haspopup="true">
+                                                            <a href="{% url 'categorias:cat_aval_index' %}" class="menu-link">
+                                                                <span class="menu-text">Categoria Avaliação</span>
+                                                            </a>
+                                                        </li>
+                                                        <li class="menu-item" aria-haspopup="true">
+                                                            <a href="{% url 'categorias:cat_uni_index' %}" class="menu-link">
+                                                                <span class="menu-text">Categoria Unidade Medida</span>
+                                                            </a>
+                                                        </li>
+                                                        <li class="menu-item" aria-haspopup="true">
+                                                            <a href="{% url 'categorias:cat_obr_index' %}" class="menu-link">
+                                                                <span class="menu-text">Categoria Obra</span>
+                                                            </a>
+                                                        </li>
                                                     </ul>
                                                 </div>
                                             </li>
                                             <li class="menu-item menu-item-submenu menu-item-rel" data-menu-toggle="hover" aria-haspopup="true">
                                                 <a href="javascript:;" class="menu-link menu-toggle">
-                                                    <span class="menu-text">Sistema de Compras</span>
-                                                    <span class="menu-desc">compras e fornecedores</span>
+                                                    <span class="menu-text">Sistema de Fornecedores e Obras</span>
+                                                    <span class="menu-desc">fornecedores e Obras</span>
                                                     <i class="menu-arrow"></i>
                                                 </a>
                                                 <div class="menu-submenu menu-submenu-classic menu-submenu-left">
                                                     <ul class="menu-subnav">
                                                         <li class="menu-item" aria-haspopup="true">
-                                                            <a href="/fornecedor/forn_index" class="menu-link">
-                                                                <span class="menu-text">Compras</span>
+                                                            <a href="{% url 'fornecedor:forn_index' %}" class="menu-link">
+                                                                <span class="menu-text">Fornecedores</span>
                                                             </a>
                                                         </li>
                                                         <li class="menu-item" aria-haspopup="true">
-                                                            <a href="/fornecedor/" class="menu-link">
-                                                                <span class="menu-text">Fornecedores</span>
+                                                            <a href="{% url 'obras:obr_index' %}" class="menu-link">
+                                                                <span class="menu-text">Obras/Compras</span>
+                                                            </a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                            <li class="menu-item menu-item-submenu menu-item-rel" data-menu-toggle="hover" aria-haspopup="true">
+                                                <a href="javascript:;" class="menu-link menu-toggle">
+                                                    <span class="menu-text">Avaliação e Monitoramento</span>
+                                                    <span class="menu-desc">Avaliação Monitoramento</span>
+                                                    <i class="menu-arrow"></i>
+                                                </a>
+                                                <div class="menu-submenu menu-submenu-classic menu-submenu-left">
+                                                    <ul class="menu-subnav">
+                                                        <li class="menu-item" aria-haspopup="true">
+                                                            <a href="{% url 'fornecedor:aval_index' %}" class="menu-link">
+                                                                <span class="menu-text">Avaliação</span>
+                                                            </a>
+                                                        </li>
+                                                        <li class="menu-item" aria-haspopup="true">
+                                                            <a href="{% url 'fornecedor:monit_index' %}" class="menu-link">
+                                                                <span class="menu-text">Monitoramento</span>
                                                             </a>
                                                         </li>
                                                     </ul>
